<resources>
    <string name="app_name">Lore</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_play_chapter">PlayChapterActivity</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="rewind"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="pause">||</string>
    <string name="title_activity_question">QuestionActivity</string>

    <string name="book_title">Book Title</string>
    <string name="book_cover">Book Cover</string>
    <string name="author_name">Author Name</string>
    <string name="chapter_title">Chapter Title</string>

    <string name="brand_name">Lore Audio</string>
    <string name="brand_tagline">Choose Your Own Adventure!</string>

    <string name="play_button">Play</string>
    <string name="rewind_button">Rewind</string>
    <string name="prev_button">Previous</string>
    <string name="next_button">Next</string>
    <string name="slow_button">Slow</string>
    <string name="speed_button">Speed</string>
    <string name="bookmark_button">Bookmark</string>
    <string name="more_button">More...</string>
    <string name="ffw_button">Forward</string>
    <string name="cover_img">Cover Image</string>
    <string name='home'>Home</string>
    <string name='download_all'>Download Full</string>
    <string name='view_bookmarks'>Bookmarks</string>
    <string name="chapters">Chapters</string>
    <string name="feedback">Provide Feedback</string>
    <string name="help">Help</string>
    <string name="start_time">0:00</string>
    <string name="end_time">0:00</string>

    <string name="description">Description</string>
    <string name="pl_speed">Playback Speed</string>
    <string name="share_prog">Share Progress</string>
    <string name="share_clip">Share Clip</string>
    <string name="set_timer">Set Timer</string>
    <string name="pl_settings">Player Settings</string>

    <string name="downloads">Downloads</string>
    <string name="library">My Library</string>
    <string name="favorites">Favorites</string>
    <string name="history">History</string>
    <string name="categories">Categories</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_activity_circle_graph">CircleGraphActivity</string>
</resources>
