<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_downloads"
            android:title="@string/downloads"/>
        <item
            android:id="@+id/nav_favorites"
            android:title="@string/favorites"/>
        <item
            android:id="@+id/nav_history"
            android:title="@string/history"/>
        <item
            android:id="@+id/nav_categories"
            android:title="@string/categories"/>
    </group>
    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>
</menu>