<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/basicLight"
    >

    <ImageButton
        android:id="@+id/storyImage"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:onClick="playNextChapter"
        android:contentDescription="@string/book_cover"
        app:srcCompat="@drawable/logo_updated" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/storyImage"
        android:layout_toEndOf="@+id/storyImage"
        android:ems="10"
        android:gravity="start"
        android:text="@string/book_title"
        android:textSize="10pt"
        android:textColor="@color/basicAccent"
        android:textAlignment="gravity"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleText"
        android:layout_toRightOf="@+id/storyImage"
        android:layout_toEndOf="@+id/storyImage"
        android:ems="10"
        android:gravity="start"
        android:text="@string/author_name"
        android:textAlignment="gravity"
        android:textStyle="italic" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/titleText"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/titleText"
        android:layout_toEndOf="@id/titleText"
        android:background="@drawable/dots_turq"
         />

</RelativeLayout>